

class Menu:
    def __init__(self, window):
        self.window = window
        pass

    def run(self):
        pass